--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,9 +10,9 @@ sitemap: false
 */
 
 /* Fonts */
-$main-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$main-font: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
 $heading-font: sans-serif;
-$regular-font-size: 1.25em; /* 20px / 16px = 1.25em; support text resizing in all browsers */
+$regular-font-size: 1rem; /* 20px / 16px = 1.25em; support text resizing in all browsers */
 
 
 /*
