--- a/assets/styles/simple/index.less
+++ b/assets/styles/simple/index.less
@@ -30,8 +30,8 @@
     --accent-bg: #2b2b2b;
     --text: #dcdcdc;
     --text-light: #ababab;
-    --accent: #fff;
-    --code: #f06292;
+    --accent: #c04646;
+    --code: #c04646;
     --preformatted: #ccc;
     --disabled: #111;
   }
@@ -63,39 +63,39 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Make the body a nice central block */
-body {
-  color: var(--text);
-  background-color: var(--bg);
-  font-size: 1.15rem;
-  line-height: 1.5;
-  display: grid;
-  grid-template-columns: 1fr min(45rem, 90%) 1fr;
-  margin: 0;
-}
-body > * {
-  grid-column: 2;
-}
-
-/* Make the header bg full width, but the content inline with body */
-body > header {
-  background-color: var(--accent-bg);
-  border-bottom: 1px solid var(--border);
-  text-align: center;
-  padding: 0 0.5rem 2rem 0.5rem;
-  grid-column: 1 / -1;
-}
-
-body > header h1 {
-  max-width: 1200px;
-  margin: 1rem auto;
-}
-
-body > header p {
-  max-width: 40rem;
-  margin: 1rem auto;
-}
-
+///* Make the body a nice central block */
+//body {
+//  color: var(--text);
+//  background-color: var(--bg);
+//  font-size: 1.15rem;
+//  line-height: 1.5;
+//  display: grid;
+//  grid-template-columns: 1fr min(45rem, 90%) 1fr;
+//  margin: 0;
+//}
+//body > * {
+//  grid-column: 2;
+//}
+//
+///* Make the header bg full width, but the content inline with body */
+//body > header {
+//  background-color: var(--accent-bg);
+//  border-bottom: 1px solid var(--border);
+//  text-align: center;
+//  padding: 0 0.5rem 2rem 0.5rem;
+//  grid-column: 1 / -1;
+//}
+//
+//body > header h1 {
+//  max-width: 1200px;
+//  margin: 1rem auto;
+//}
+//
+//body > header p {
+//  max-width: 40rem;
+//  margin: 1rem auto;
+//}
+//
 
 @import "others";
 @import "button";
